# China-Water-Uses

./: .gitignore  .pre-commit-config.yaml  .sourcery.yaml  README.md  main.py  makefile  matplotlib_study.ipynb  mpl_visual1.py  numpy_study.ipynb  processing.ipynb  pyproject.toml
china_water_use/: core.py
notebooks/: processing.ipynb  selecting.ipynb
src/: constants.py  core.py  units.py
tests/: test_constants.py  test_core.py  testing.ipynb
