[tool.poetry]
name = "water_use_zhou"
version = "0.1.0"
description = ""
authors = ["SongshGeo <songshgeo@gmail.com>"]
readme = "README.md"
packages = [{include = "water_uses_ch", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
allure-pytest = "^2.12.0"
ipykernel = "^6.21.2"
jupyterlab = "^3.6.1"
jupyterlab-execute-time = "^2.3.1"
jupyterlab-lsp = "^3.10.2"
python-lsp-server = "^1.7.1"
flake8 = "^6.0.0"
isort = "^5.12.0"
nbstripout = "^0.6.1"
pydocstyle = "^6.3.0"
pre-commit-hooks = "^4.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
